--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation 'com.google.ar:core:1.25.0'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
