--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,5 @@
 include ':FtcRobotController'
 include ':TeamCode'
+include ':ftcrobotcontroller:libBIGFATPENIS'
+include ':BIGFATPENIS'
+include ':BIGFATPENIS:meepmeepsourcebruh'
